Form to create flashcard sets integrated with backend, fixed typo

--- a/frontend/assets/index-template.html
+++ b/frontend/assets/index-template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fleshcards</title>
+  <title>Flashcards</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <meta charset="UTF-8">
 </head>
