--- a/frontend/assets/index-template.html
+++ b/frontend/assets/index-template.html
@@ -3,6 +3,7 @@
 <head>
   <title>Flashcards</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
   <meta charset="UTF-8">
 </head>
 <body>
